<?php

use Symfony\Component\HttpKernel\Bundle\Bundle;

/**
 * @author Saqqal Abdelaziz <seqqal.abdelaziz@gmail.com>
 * @Linkedin https://www.linkedin.com/abdelaziz-saqqal
 */

class LlmIntegrationBundle extends Bundle
{

}